# Sprocket

./: CMakeLists.txt  LICENSE  README.md
Example/: CMakeLists.txt
Example/res/tilemaps/: ColliderTileMap.txt  MazeCollider.txt  MazeSprite.txt  SpriteTileMap.txt
Example/src/: Camera.hpp  Player.hpp  TestAnimation.hpp  TestApplication.cpp  Tiles.hpp  Title.hpp  main.cpp
Example/src/Entities/: Camera.hpp
Example/src/FlappyBirdScene/: Bird.hpp  Border.hpp  FlappyBirdScene.hpp  GameOverSoundEffect.hpp  Obstacle.hpp  ObstacleSpawner.hpp  ScoreText.hpp
Example/src/GameScene/: Camera.hpp  GameScene.hpp  Player.hpp  TestAnimation.hpp  Tiles.hpp
Example/src/MenuScene/: EnterToStart.hpp  MenuScene.hpp  Title.hpp
Sprocket/: CMakeLists.txt
Sprocket/docs/: .$EventNetwork.drawio.bkp  EventNetwork.drawio
Sprocket/include/: Sprocket.h
Sprocket/res/shaders/: Default.frag  Default.vert  Default32.frag
Sprocket/src/: Application.cpp  Application.h  EntryPoint.h  Input.cpp  Input.h  Keycodes.h  MouseButtons.h  Window.cpp  Window.h
Sprocket/src/Audio/: AudioManager.cpp  AudioMananger.h  Sound.cpp  Sound.h
Sprocket/src/Core/: Application.cpp  Application.h  EntryPoint.hpp  Global.cpp  Global.h  Input.cpp  Input.h  Keycodes.h  Macros.h  MouseButtons.h  Sprocket.pch  Window.cpp  Window.h
Sprocket/src/ECS/: Camera.h  Collision.cpp  Collision.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Physics.cpp  Physics.h  QuadRenderer.cpp  QuadRenderer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ScriptableComponent.h  TileMap.cpp  TileMap.h  Transform.cpp  Transform.h
Sprocket/src/Events/: ApplicationEvent.h  AudioEvent.h  ECSEvent.h  Event.h  EventHandler.h  EventValidation.cpp  EventValidation.h  KeyboardEvent.h  MouseEvent.h  PhysicsEvent.h  RenderEvent.h  WindowEvent.h  WindowEvents.h
Sprocket/src/ImGui/: ImGuiImpl.cpp  ImGuiImpl.h
Sprocket/src/Logger/: Logger.cpp  Logger.h
Sprocket/src/Physics/: Collision.cpp  Collision.h  Physics.cpp  Physics.h  PhysicsManager.cpp  PhysicsManager.h
Sprocket/src/Renderer/: Font.cpp  Font.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  VertexBufferLayout.hpp
Sprocket/src/Scene/: BoxColliderComponent.cpp  CameraComponent.cpp  CameraComponent.h  CircleColliderComponent.cpp  ColliderComponent.cpp  ColliderComponent.h  Component.h  Entity.cpp  Entity.h  Entity.tpp  OnActivateParams.h  OnDeactivateParams.h  OnUpdateParams.h  QuadRendererComponent.cpp  QuadRendererComponent.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SoundComponent.cpp  SoundComponent.h  TileMapComponent.cpp  TileMapComponent.h  TransformComponent.cpp  TransformComponent.h
Sprocket/src/Scene/Components/: AnimationComponent.cpp  AnimationComponent.h  BoxColliderComponent.cpp  CameraComponent.cpp  CameraComponent.h  CircleColliderComponent.cpp  ColliderComponent.cpp  ColliderComponent.h  Component.h  QuadRendererComponent.cpp  QuadRendererComponent.h  SoundComponent.cpp  SoundComponent.h  TextRendererComponent.cpp  TextRendererComponent.h  TileMapComponent.cpp  TileMapComponent.h  TransformComponent.cpp  TransformComponent.h
Sprocket/src/Scene/Components/Subcomponents/: Animation.h  Sprite.h
Sprocket/src/Scene/SceneUtils/: Collision.cpp  Collision.h
Sprocket/src/Utils/: ExternalUtils.h  RendererUtils.cpp  RendererUtils.h  RendererUtils.hpp  SceneUtils.cpp  SceneUtils.h  Singleton.h  UUID.cpp  UUID.h
Sprocket/test/: CMakeLists.txt
Sprocket/test/src/: CollisionTests.cpp  EntityTests.cpp  EventTests.cpp  InputTests.cpp  test.cpp
res/shaders/: Basic.vert
src/: GLValidate.hpp  Input.cpp  Input.h  Window.cpp  Window.h  Window.hpp  main.cpp
src/Renderer/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.hpp
